--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
         <h1>I'm Pankaj</h1>
-        <h2>a developer and programmer</h2>
+        <h2 class="sub-head">a developer and programmer</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
         <img class="mountain" src="images/mountain.png" alt="mountain-img">
     </div>
