--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     competetive programming on renowned websites.
                 </p>
             </div>
-            <div class="skill-row" id="Web-Development">
+            <div class="skill-row" id="WebDevelopment">
                 <img class="webdev" src="images/DXKg.gif" alt="" height="256">
                 <h3>Web developer</h3>
                 <p class="Web-developer-description">Just a beginner web developer, soon I will be pro</p>
