--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="middle-container">
         <div class="profile">
-            <img src="images/programmer.png" alt="" height="256">
+            <img src="images/68144477.jpg" alt="" height="230" style="border-radius: 50%;">
             <h2>Hello.</h2>
             <p>Myself Pankaj currently pursuing Btech from Roorkee Institute of Technology, dream joy is to be a
                 developer at Amazon, Google or any of the FAANG companies.
@@ -53,11 +53,21 @@
         <hr>
 
         <div class="contact-me">
+            <h2>Projects</h2>
+            <h3>Projects show how much you know</h3>
+            <p>Please checkout some of my projects which I made in my going journey, from my github account</p>
+            <a class="btn" id="btn" href="https://github.com/Theedith">GITHUB ACCOUNT</a>
+        </div>
+
+        <hr>
+
+        <div class="contact-me">
             <h2>Get In Touch</h2>
             <h3>You can contact me through any one the following handles!</h3>
             <p>One of the convinent and formal way of contacting is mailing me</p>
             <a class="btn" id="btn" href="mailto:pankaj11koundal@gmail.com">CONTACT ME</a>
         </div>
+
     </div>
 
     <div class="bottom-container">
